Dark mode fixes

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -4,11 +4,21 @@
   --linkcolor: #317bd0;
   --backgroundgray: #dddddd;
   --background-color: #fff;
-  --text-color: #212529;
+  --text-color: #000;
   --bullet-background: #fff;
   font-family: "Work Sans", sans-serif;
 }
-
+@media (prefers-color-scheme: dark) {
+    :root {
+        --primarycolor: #418a69;
+        --secondarycolor: #b8c5be;
+        --linkcolor: #5a94dc;
+        --backgroundgray: #343a40;
+        --background-color: #212529;
+        --text-color: #f8f9fa;
+        --bullet-background: var(--background-color);
+    }
+}
 /* Box sizing rules */
 *,
 *::before,
@@ -155,14 +165,23 @@ footer {
 }
 
 .splash {
-  background: url("../images/96268719-DSC_5604.jpeg") no-repeat;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-  height: 100svh;
+    background-color: var(--primarycolor); /* this is the color layer */
+    height: 100vh;
+    height: 100svh;
+    position: relative;
+    isolation: isolate;
+}
+
+.splash::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../images/96268719-DSC_5604.jpeg") no-repeat center/cover;
+  mix-blend-mode: multiply;
+  opacity: .3;
 }
 
 .splash-inner {
@@ -189,6 +208,8 @@ footer {
 
 .contact-icon {
   width: 100%;
+    mix-blend-mode: multiply;
+    opacity: .4;
 }
 
 .countertext {
@@ -449,13 +470,8 @@ footer {
   }
 }
 @media (min-width: 768px) {
-  .splash {
-    background: url("../images/96268719-DSC_5604.jpeg") fixed no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    background-position: center;
+  .splash::before {
+    background-attachment: fixed;
   }
   .column3-container {
     gap: 2rem;
@@ -497,21 +513,5 @@ footer {
 @media (min-width: 920px) {
   .column3-container {
     max-width: 920px;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --primarycolor: #418a69;
-    --secondarycolor: #b8c5be;
-    --linkcolor: #5a94dc;
-    --backgroundgray: #343a40;
-    --background-color: #212529;
-    --text-color: #f8f9fa;
-    --bullet-background: var(--background-color);
-  }
-
-  .splash {
-    opacity: 0.85;
   }
 }
